actions updated and gitignore added

--- a/remodelcompletecode.ipynb
+++ b/remodelcompletecode.ipynb
@@ -2598,7 +2598,7 @@
     "    print(\"3: Compare the Models\")\n",
     "    print(\"4: Quit\")\n",
     "    choice=int(input())\n",
-    "    if(choice == 4):\n",
+    "    if(choice >= 4):\n",
     "        break\n",
     "    actions(choice)\n"
    ]
